--- a/faq.html
+++ b/faq.html
@@ -282,7 +282,7 @@ continuous, unless you have all TCH's on TRX1.</p></center>
 						</div>
 
                         <div class="grid_4">
-						 <h5 style="text-align: center;" class="font_5">20</h5>
+						 <h5 style="text-align: center;" class="font_5">21</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq"> Where is registration of mobile station on a SIP server, what kind of billing options available with UmSITE?
 
@@ -306,8 +306,8 @@ We can help you do a non-standart configuration on demand and run a commercial n
 						</div>
 
                         <div class="grid_4">
-				 	 <h5 style"s2"="text-align: center;" class="font_5">21</h5>
-						  <div class=></div>
+						 <h5 style="text-align: center;" class="font_5">22</h5>
+						  <div class="s2"></div>
 						  <h2 class="faq">  Is there all calls will be charged (inside/outside) ?
 
 </h2>
@@ -317,7 +317,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
 						</div>
 
                         <div class="grid_4">
-				 	 <h5 style"s2"="text-align: center;" class="font_5">22</h5>
+				 	     <h5 style="text-align: center;" class="font_5">23</h5>
 						  <div class=></div>
 						  <h2 class="faq">  Wouldn't it get a network congestion cause ? Without bill for inside network calls ?
 
@@ -328,7 +328,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
 						</div>
 
                         <div class="grid_4">
-				 	 <h5 style"s2"="text-align: center;" class="font_5">23</h5>
+				 	         <h5 style="text-align: center;" class="font_5">24</h5>
 						  <div class=></div>
 						  <h2 class="faq">  Do you have another option of commercial billing for inside and outside calls?
 
@@ -338,7 +338,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
 
 						</div>
                         <div class="grid_4">
-				 	 <h5 style"s2"="text-align: center;" class="font_5">24</h5>
+				 	 <h5 style="text-align: center;" class="font_5">25</h5>
 						  <div class=></div>
 						  <h2 class="faq">  How to control/change the process of automatically assigning a number? Where is the source code?
 
@@ -361,7 +361,7 @@ The recommended way of assigning numbers is by out of band means:
 
 
                         <div class="grid_4">
-				 	 <h5 style"s2"="text-align: center;" class="font_5">25</h5>
+				 	 <h5 style="text-align: center;" class="font_5">26</h5>
 						  <div class=></div>
 						  <h2 class="faq">  How to send the person welcome Message with their assigned number?
 
