Mistakes correcting regarding markdown ver

--- a/faq.html
+++ b/faq.html
@@ -308,7 +308,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">22</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  Is there all calls will be charged (inside/outside) ?
+						  <h2 class="faq">  Whether all calls will be charged (inside/outside) ?
 
 </h2>
 						  <center><p> It depends on whether you want to bill local calls or not.</center></p>
@@ -319,7 +319,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
                         <div class="grid_4">
 				 	     <h5 style="text-align: center;" class="font_5">23</h5>
 						  <div class=></div>
-						  <h2 class="faq">  Wouldn't it get a network congestion cause ? Without bill for inside network calls ?
+						  <h2 class="faq">  Wouldn't it get a network congestion cause without charge for the internal network calls?
 
 </h2>
 						  <center><p> We're developing advanced options to avoid full network congestion in UmCORE server which will be available as part of the commercial agreement.</center></p>
