--- a/faq.html
+++ b/faq.html
@@ -175,7 +175,7 @@
 						  <h2 class="faq"> How to assign different external DIDs to different mobile phones?
 
 </h2>
-						  <center><p>Create multiple gateways and multiple rules in the dialplan. But we're not recommend that for this case. Usually people use SIP trunks, you need just routing appropriate calls to the trunk with a single rule.
+						  <center><p>Create multiple gateways and multiple rules in the dialplan. But we do not recommend that for this particular case. Usually people use SIP trunks, you need just routing appropriate calls to the trunk with a single rule.
 </p></center>
 
 
@@ -185,7 +185,7 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">14</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> How does subscribers pay bills in terms of village service?
+						  <h2 class="faq"> How do subscribers pay their bills in terms of village service?
 
 </h2>
 						  <center><p>1. express card payment 2. physically bring money to the person who have an access for the enroll payments.</p></center>
@@ -197,7 +197,7 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">15</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> How does subscribers provision to network, SIM Cards or Phone?
+						  <h2 class="faq"> How do subscribers provision to the network, SIM Cards or Phone?
 
 </h2>
 						  <center><p>Sim card. You can program your own sim cards and that's would be a closed network either you can use existed sim, then network would be open.
@@ -224,7 +224,7 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">17</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> Is it possible to connect external BTS to the network through A-bis interface?
+						  <h2 class="faq"> Does it possible to connect external BTS to the network through A-bis interface?
 
 </h2>
 						  <center><p>We do not support external BTS connection through A-bis interface, because of this architecture is not fault-tolerant from the connection lost. It does not have local calls switching, there is no a simple ways of backhaul optimization, that brings an extra expenses for the village connection through the VSAT.</p></center>
@@ -237,7 +237,7 @@
                          <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">18</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> Is it possible to collect a segment of independent OpenBTS and OsmoBTS under OpenBSC/SIP controller for the Handover modeling?
+						  <h2 class="faq"> Does it possible to collect a segment of independent OpenBTS and OsmoBTS under OpenBSC/SIP controller for the Handover modeling?
 
 </h2>
 						  <center><p>Yes, you need just a two UmTRX</p></center>
@@ -250,7 +250,7 @@
                          <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">19</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> Does the SGSN and GGSN are implemented?
+						  <h2 class="faq"> Are the SGSN and GGSN implemented?
 
 </h2>
 						  <center><p>Yes, osmo-sgsn and openggsn. This is not a complete implementation of SGSN and GGSN. For more information refer to <a href="http://openbsc.osmocom.org/trac/wiki/OpenBSC_GPRS">Osmocom</a>.</p></center>
@@ -373,7 +373,21 @@ For the reference, code for the <u>token auth</u> located <a href="http://cgit.o
 
 
 						</div>
+						<div class="grid_4">
+				 	         <h5 style="text-align: center;" class="font_5">27</h5>
+						  <div class=></div>
+						  <h2 class="faq">  How to implement a GPS trackers connection to the UmDesk/UmSite through GPRS? ?
 
+</h2>
+						  <center><p> We do not install GPRS on BTS, but this is available on stack that we are using <a href="http://osmocom.org/">osmocom stack</a> 'How to' described <a href="http://fairwaves.github.io/um-docs/how_to's.html">here</a>
+						  <br>
+						  For example:
+						  <br>
+If the GPS trackers and BTS would situated in 550 sq/ft room, then you will be able to use CS-4 coding scheme that allows up to ~ 20 kbit/s on gsm channel timeslot. Basically 2 TRx channels of UmDesk/UmSite with 15 timeslots for traffic provides up to 300 kbit/s. According that you can count how many trackers might work under one BTS.
+</center></p>
+
+
+						</div>
 
 
     <div>
