--- a/how_to's.html
+++ b/how_to's.html
@@ -18,7 +18,7 @@
 					
 					</div>
 					<div class="logo">
-					<img class="imglogo" alt=""  src="logo.png">
+					<img class="imglogo"  alt=""  src="logo2.png">
 					</div>
 		
 		</div>
