--- a/umsite.html
+++ b/umsite.html
@@ -18,7 +18,7 @@
 					
 					</div>
 					<div class="logo">
-					<img class="imglogo" alt=""  src="logo.png">
+					<a href="https://fairwaves.co/"><img class="imglogo"  alt=""  src="logo2.png"></a>
 					</div>
 		
 		</div>
