removed question mark

--- a/faq.html
+++ b/faq.html
@@ -391,7 +391,7 @@ For the reference, code for the <u>token auth</u> located <a href="http://cgit.o
 						<div class="grid_4">
 				 	         <h5 style="text-align: center;" class="font_5">28</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  How to implement a GPS trackers connection to the UmDesk/UmSite through GPRS? ?
+						  <h2 class="faq">  How to implement a GPS trackers connection to the UmDesk/UmSite through GPRS?
 
 </h2>
 						  <center><p> We do not install GPRS on BTS, but this is available on stack that we are using <a href="http://osmocom.org/">osmocom stack</a> 'How to' described <a href="http://fairwaves.github.io/um-docs/how_to's.html">here</a>
