push grammar changes

--- a/faq.html
+++ b/faq.html
@@ -32,7 +32,7 @@
 					  <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">01</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">Does the units comes with the complete system to start working immediately?</h2>
+						  <h2 class="faq">Does the unit comes with the complete system to start working immediately?</h2>
 						  <center><p>Yes, you can start from the Network-In-The-Box configuration, everything you need for small isolated network in one unit.</p></center>
 
 
@@ -56,8 +56,8 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">03</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">How does affect installation without GPS antenna on the system?</h2>
-						  <center><p>We strongly recommend to use GPS antenna, however it possible to work without it ,but it's may cause the problem of cell phone registration to the network in terms of surrounding GSM networks, cell phone model, temperature. Once the phone has registered to network, GPS does not affect on productivity of the system at all.</p></center>
+						  <h2 class="faq">How does installation without GPS antenna affect the system?</h2>
+						  <center><p>We strongly recommend to use GPS antenna, however it is possible to work without it ,but it's may cause the problem of cell phone registration to the network in terms of surrounding GSM networks, cell phone model, temperature. Once the phone has registered to network, GPS does not affect productivity of the system at all.</p></center>
 
 
 						</div>
@@ -66,7 +66,7 @@
 						 <h5 style="text-align: center;" class="font_5">04</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">How does the system handle handover between MultiBTS systems?</h2>
-						  <center><p>BSC on a separate server. We use intra BSC handover. How to set up, described below in technical chapter.</p></center>
+						  <center><p>BSC on a separate server. We use intra BSC handover. How to set up, described at <a href="https://fairwaves.co/docs/how_to's.html">How to</a></p></center>
 
 
 						</div>
@@ -96,10 +96,10 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">07</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">Do you have a specific simcards or usual simcards can be used?
+						  <h2 class="faq">Do you have specific simcards or usual simcards can be used?
 
 </h2>
-						  <center><p>Fairwaves base station could be configured to work with any SIM-cards. However it is impossible to provide subscriber authentication and traffic encryption if you do not know Ki secret key of your SIM-cards. If you operate a normal mobile network with encryption and subscriber authentication,you can set up only open network either get SIM-cards with known Ki keys to set up close network. You can buy a SIM-cards and program them.</p></center>
+						  <center><p>Fairwaves base station could be configured to work with any SIM-cards. However it is impossible to provide subscriber authentication and traffic encryption if you do not know Ki secret key of your SIM-cards. If you operate a normal mobile network with encryption and subscriber authentication,you can set up only open network either get SIM-cards with known Ki keys to set up close network. You can buy SIM-cards and program them.</p></center>
 
 
 
@@ -108,10 +108,10 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">08</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">What is capacity of the subscriber database?
+						  <h2 class="faq">What is the capacity of the subscriber database?
 
 </h2>
-						  <center><p>A base station with one transceiver are able to handle from 200 subscribers (if you offer your subscribers a flat tariff with free local calls) to 500 (normal mode with tariffs still comfortable for subscribers). For example, with 10 000 subscribers you will need around 20 base stations. Please note this is very rough estimation.</p></center>
+						  <center><p>A base station with one transceiver is able to handle from 200 subscribers (if you offer your subscribers a flat tariff with free local calls) to 500 (normal mode with tariffs still comfortable for subscribers). For example, with 10 000 subscribers you will need around 20 base stations. Please note this is very rough estimation.</p></center>
 
 
 
@@ -136,7 +136,7 @@
 						  <h2 class="faq">How do you handle SMS and GPRS in your systems?
 
 </h2>
-						  <center><p> Fairwaves base stations are able to provide basic services: Voice and SMS also Fairwaves provide GPRS, in terms of quality it disabled in production systems to get more capacity for the voice and SMS either that is too slow to use it as data service. We considering to use WiFi instead of GPRS.
+						  <center><p> Fairwaves base stations are able to provide basic services: Voice and SMS also Fairwaves provide GPRS, in terms of quality it disabled in production systems to get more capacity for the voice and SMS either that is too slow to use it as data service. We are considering to use WiFi instead of GPRS.
 </center></p>
 
                         </div>
@@ -148,7 +148,7 @@
 						  <h2 class="faq">Is it possible to connect through the ISUP/SIP-T as a MSC-MSC?
 
 </h2>
-						  <center><p>No, it doesn't implemented yet.
+						  <center><p>No, it is not implemented yet.
 </p></center>
 
 
@@ -159,7 +159,7 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">12</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">Does the SGSN and GGSN are implemented?
+						  <h2 class="faq">Are the SGSN and GGSN implemented?
 
 </h2>
 						  <center><p>Yes, osmo-sgsn and openggsn. This is not a complete implementation of SGSN and GGSN. For more information refer to <a href="http://openbsc.osmocom.org/trac/wiki/OpenBSC_GPRS">Osmocom</a> .</p></center>
@@ -174,7 +174,7 @@
 						  <h2 class="faq"> How to assign different external DIDs to different mobile phones?
 
 </h2>
-						  <center><p>Create multiple gateways and multiple rules in the dialplan. But we do not recommend that for this particular case. Usually people use SIP trunks, you need just routing appropriate calls to the trunk with a single rule.
+						  <center><p>Create multiple gateways and multiple rules in the dialplan. But we do not recommend that for this particular case. Usually people use SIP trunks, you just need routing appropriate calls to the trunk with a single rule.
 </p></center>
 
 
@@ -196,10 +196,10 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">15</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> How do subscribers provision to the network, SIM Cards or Phone?
+						  <h2 class="faq"> How is subscriber provisioning process goes, SIM Cards or Phone?
 
 </h2>
-						  <center><p>Sim card. You can program your own sim cards and that's would be a closed network either you can use existed sim, then network would be open.
+						  <center><p>Sim card. You can program your own sim cards and this would be a closed network either you can use existed sim, then network would be open.
 </p></center>
 
 
@@ -213,7 +213,7 @@
 						  <h2 class="faq"> How is the billing system interconnected with MNO?
 
 </h2>
-						  <center><p>It depend from the architecture but in general: fairwaves billing system can be integrated with MNO through the camel and diametr protocol.</p></center>
+						  <center><p>It depends on the architecture but in general: fairwaves billing system can be integrated with MNO through the camel and diametr protocol.</p></center>
 
 
 
@@ -223,10 +223,10 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">17</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> Does it possible to connect external BTS to the network through A-bis interface?
+						  <h2 class="faq"> Is it possible to connect external BTS to the network through A-bis interface?
 
 </h2>
-						  <center><p>We do not support external BTS connection through A-bis interface, because of this architecture is not fault-tolerant from the connection lost. It does not have local calls switching, there is no a simple ways of backhaul optimization, that brings an extra expenses for the village connection through the VSAT.</p></center>
+						  <center><p>We do not support external BTS connection through A-bis interface, because this architecture is not fault-tolerant from the connection lost. It does not have local calls switching, there is no simple way of backhaul optimization, that brings extra expenses for the village connection through the VSAT.</p></center>
 
 
 
@@ -236,10 +236,10 @@
                          <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">18</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> Does it possible to collect a segment of independent OpenBTS and OsmoBTS under OpenBSC/SIP controller for the Handover modeling?
+						  <h2 class="faq"> Is it possible to collect a segment of independent OpenBTS and OsmoBTS under OpenBSC/SIP controller for the Handover modeling?
 
 </h2>
-						  <center><p>Yes, you need just a two UmTRX</p></center>
+						  <center><p>Yes, you just need a two UmTRX</p></center>
 
 
 
@@ -261,7 +261,7 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">20</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> TRX0 frequency spectrum detected but TRX1 does not seem to be transmitting on the specified frequency. what is could be the issue?
+						  <h2 class="faq"> TRX0 frequency spectrum detected but TRX1 does not seem to be transmitting on the specified frequency. what could be the issue?
 
 </h2>
 						  <center><p>According to the GSM Standard, only TRX0 has to transmit constantly.
@@ -269,7 +269,7 @@ Secondary TRX's can transmit only when TRX0 would completely loaded.
 
 So if you want to see transmission on the TRX1 you should either:
 <br>
-1. have more than 6 active call legs (more than 3 acive calls)
+1. have more than 6 active call legs (more than 3 active calls)
 <br>
 2. set TRX0 configuration to SDCCH and leave TCH only on the TRX1 and make a call.
 <br>
@@ -283,7 +283,7 @@ continuous, unless you have all TCH's on TRX1.</p></center>
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">21</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> Where is registration of mobile station on a SIP server, what kind of billing options available with UmSITE?
+						  <h2 class="faq"> Where is registration of mobile station on a SIP server, what kind of billing options are available with UmSITE?
 
 </h2>
 						  <center><p>With the current UmSITE software, a VoIP server does not receive SIP INVITE messages for GSM users, so a BTS system can:
@@ -294,11 +294,11 @@ continuous, unless you have all TCH's on TRX1.</p></center>
 <br>
 3. Route all SMS to an SMPP server for billing purposes.
  <br>
-<a href="https://github.com/Rhizomatica/rccn">Here is an example of a system</a> that implements flat tariff plan for calls inside and per-minute for calls outside of the network.
+<a href="https://github.com/Rhizomatica/rccn">Here is an example of a system</a> that implements flat tariff plan for calls inside and per-minute for calls outside the network.
 <br>
 
-We can help you do a non-standart configuration on demand and run a commercial network with more UmSITEs, in that case we suggest to discuss a commercial agreement to provide you support and network maintenance for upcharge price.
-.</p></center>
+We can help you do a non-standard configuration on demand and run a commercial network with more UmSITEs, in this case we suggest to discuss a commercial agreement to provide you support and network maintenance for upcharge price.
+</p></center>
 
 
 
@@ -307,7 +307,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">22</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  Whether all calls will be charged (inside/outside) ?
+						  <h2 class="faq">  Will all calls be charged (inside/outside) ?
 
 </h2>
 						  <center><p> It depends on whether you want to bill local calls or not.</center></p>
@@ -321,7 +321,7 @@ We can help you do a non-standart configuration on demand and run a commercial n
                         <div class="grid_4">
 				 	     <h5 style="text-align: center;" class="font_5">23</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  Wouldn't it get a network congestion cause without charge for the internal network calls?
+						  <h2 class="faq">  Wouldn't it get a network congestion cause, providing free internal calls?
 
 </h2>
 						  <center><p> We're developing advanced options to avoid full network congestion in UmCORE server which will be available as part of the commercial agreement.</center></p>
@@ -342,12 +342,12 @@ We can help you do a non-standart configuration on demand and run a commercial n
                         <div class="grid_4">
 				 	 <h5 style="text-align: center;" class="font_5">25</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  How to control/change the process of automatically assigning a number? Where is the source code?
+						  <h2 class="faq">  How to control/change the process of automatical assigning a number? Where is the source code?
 
 </h2>
 						  <center><p> The code which generates the random number is <a href="http://cgit.osmocom.org/openbsc/tree/openbsc/src/libmsc/db.c?h=fairwaves/master#n1229">here</a>
 
-But we strongly recommend you against modifying the code. We regularly roll-out updated code and you'll be losing your changes.
+But we strongly recommend you not to modify the code. We regularly roll-out updated code and you'll be losing your changes.
 
 The recommended way of assigning numbers is by out of band means:
  <br>
@@ -365,7 +365,7 @@ The recommended way of assigning numbers is by out of band means:
                         <div class="grid_4">
 				 	 <h5 style="text-align: center;" class="font_5">26</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  How to send the person welcome Message with their assigned number?
+						  <h2 class="faq">  How to send the person a welcome Message with their assigned number?
 
 </h2>
 						  <center><p> Currently this is implemented only for the <u>token</u> authentication mode, but this mode it not recommended. It tried to kick users out of the network, which does not behave consistently for different phones. We would recommend to implement this through external means - e.g. by monitoring new user registrations on SMPP socket.
@@ -379,7 +379,7 @@ For the reference, code for the <u>token auth</u> located <a href="http://cgit.o
 						  <h2 class="faq">  How to route the SMS messages through an external gateway for two way messaging?
 
 </h2>
-						  <center><p> SMS communication is implemented with SMPP 3.4 protocol. It's a standard for the SMS communication. OsmoNITB serves as an SMPP server. How to configure <a href="http://fairwaves.github.io/um-docs/soft_conf.html">SMPP</a> (5.7 SMPP Configuration), so you should implement a client for that purposes. You can use <a href="http://www.kannel.org/">Kannel</a> (Open Source WAP and SMS gateway)  or develop your own, there are SMPP bindings for C, Python and other languages
+						  <center><p> SMS communication is implemented with SMPP 3.4 protocol. It's a standard for the SMS communication. OsmoNITB serves as an SMPP server. How to configure <a href="http://fairwaves.github.io/um-docs/soft_conf.html">SMPP</a> (5.7 SMPP Configuration), so you should implement a client for these purposes. You can use <a href="http://www.kannel.org/">Kannel</a> (Open Source WAP and SMS gateway)  or develop your own, there are SMPP bindings for C, Python and other languages
 						  
 </center></p>
 
@@ -398,7 +398,7 @@ For the reference, code for the <u>token auth</u> located <a href="http://cgit.o
 						  <br>
 						  For example:
 						  <br>
-If the GPS trackers and BTS would situated in 550 sq/ft room, then you will be able to use CS-4 coding scheme that allows up to ~ 20 kbit/s on gsm channel timeslot. Basically 2 TRx channels of UmDesk/UmSite with 15 timeslots for traffic provides up to 300 kbit/s. According that you can count how many trackers might work under one BTS.
+If the GPS trackers and BTS would situated in 550 sq/ft room, then you will be able to use CS-4 coding scheme that allows up to ~ 20 kbit/s on gsm channel timeslot. Basically 2 TRx channels of UmDesk/UmSite with 15 timeslots for traffic provides up to 300 kbit/s. According to it, you can count how many trackers might work under one BTS.
 </center></p>
 
 
