--- a/how_to's.html
+++ b/how_to's.html
@@ -874,7 +874,7 @@ cd ..
 <p>To overwrite EEPROM value you can set the environment variable for osmo-trx:</p>
 <pre><code>$ UMTRX_PA_DCDC_R=0 osmo-trx -c 2 -s 4
 </code></pre>
-
+<p><strong>NOTE:</strong> Real time output power control is available, see instruction  <u>5.5 BTS Configuration</u> of the <a href="https://fairwaves.co/docs/soft_conf.html">software configuration manual</a>
 <p>osmo-trx start script is located in <em>/etc/sv/osmo-trx/run</em></p>
 
 
