--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 <body class="homepage">
 	<div class="wrapper">
-	
+
 		<div id="header">
 					<div class="s1"></div>
 					<div class="menu">
@@ -49,7 +49,7 @@
 					
 						 <h5 style="text-align: center;" class="font_5">UmSITE quick start</h5>
 						  <div class="s2"></div>
-						  <center><p>This is an IP-backhaul GSM BTS, BSC and Network In The Box, protected from any weather conditions solution, which is used for wide range network</p></center>
+						  <center><p>This is an IP-backhaul GSM BTS, BSC and Network In The Box (NITB) solution, protected from any weather conditions, which is used for wide range network</p></center>
 						  <a class="btn" href="umsite.html"><span>View Manual</span></a>
 					  </div>
 					  
