--- a/umsite.html
+++ b/umsite.html
@@ -458,16 +458,16 @@ img {
 <p> Launch the “Settings” from the menu system.</p>
 </li>
 <li>
-<p>1. Select “More.”</p>
+<p>1. Select <u>More</u></p>
 </li>
 <li>
-<p>2. Select “Mobile networks.”</p>
+<p>2. Select <u>Mobile networks</u></p>
 </li>
 <li>
-<p>3. Select “Network operators.” </p>
+<p>3. Select <u>Network operators</u> </p>
 </li>
 <li>
-<p>4. Select “Search networks.”</p>
+<p>4. Select <u>Search networks</u></p>
 </li>
 </ol>
 <p><img src="http://s61.radikal.ru/i171/1505/07/60f9ce0b5a97.png" /></p>
