--- a/umsite.html
+++ b/umsite.html
@@ -5,7 +5,7 @@
 	</head>
 <body class="homepage">
 	<div class="wrapper">
-	
+
 		<div id="header">
 					<div class="s1"></div>
 					<div class="menu">
@@ -455,7 +455,7 @@ img {
 <h4>Searching for the Network</h4>
 <ol>
 <li>
-<p> Launch the “Settings” from the menu system.</p>
+<p> Launch the <u>Settings</u> from the menu system.</p>
 </li>
 <li>
 <p>1. Select <u>More</u></p>
