--- a/umdesk.html
+++ b/umdesk.html
@@ -471,7 +471,7 @@ img {
 <h4>Searching for the Network</h4>
 <ol>
 <li>
-<p> Launch the “Settings” from the menu system.</p>
+<p> Launch the <u>Settings</u> from the menu system.</p>
 </li>
 <li>
 <p>1. Select <u>More</u></p>
