--- a/umsite.html
+++ b/umsite.html
@@ -445,10 +445,10 @@ img {
 
 <p>Steps:</p>
 
-<li>&#8226 Place the UmSite on the mast directly connectors down</li>
-<li>&#8226 Attach GSM antennas. We recommend having at least 10 ft (3m) between them</li>
-<li>&#8226 Attach GPS antenna. Good antenna visibility to the sky is required</li>
-<li>&#8226 Turn on Base station</li>
+<li>Place the UmSite on the mast directly connectors down</li>
+<li> Attach GSM antennas. We recommend having at least 10 ft (3m) between them</li>
+<li> Attach GPS antenna. Good antenna visibility to the sky is required</li>
+<li> Turn on Base station</li>
 <p><h3>Note:</h3> GSM antennas are not included in a standard package. We do not recomend to operate base station without antennas</p>
 <h4><a name="2.1 Antennas installation"></a>2.1 Antennas installation<a class="anchorlink" href="#2.1	Antennas installation"></a></h4>
 <p>Each of both antennas complement each other. The second antenna must have the same position as the first antenna on a mast as well as the same direction and incline angle to the ground. </p>
